--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,18 +1,18 @@
 .sidebar
   .sidebar__user
-    .sidebar__user___block
-      .sidebar__user___block____name
+    .sidebar__user__block
+      .sidebar__user__block__name
         masa
-      .sidebar__user___block____icon
-        .sidebar__user___block____icon____newgroup
+      .sidebar__user__block__icon
+        .sidebar__user__block__icon__newgroup
           = link_to "#" do
             = icon('fas', 'edit')
-        .sidebar__user___block____icon____set
+        .sidebar__user__block__icon__set
           = link_to "#" do
             = icon('fas', 'cog')
   .sidebar__groupname
-    .sidebar__groupname___box
-      .sidebar__groupname___box____groups
+    .sidebar__groupname__box
+      .sidebar__groupname__box__groups
         techcamp
-      .sidebar__groupname___box____message
+      .sidebar__groupname__box__message
         まだメッセージがありません
