--- a/app/assets/stylesheets/modules/_main_chat.scss
+++ b/app/assets/stylesheets/modules/_main_chat.scss
@@ -12,14 +12,14 @@
     padding: 0 40px;
     align-items: center;
     justify-content: space-between;
-    &___left{
+    &__left{
       margin-top: 35px;
-      &____name{
+      &__name{
         color: #333333;
         font-size: 20px;
         margin-bottom: 15px;
       }
-      &____member{
+      &__member{
         color: #999999;
         font-size: 12px;
         @include df;
@@ -40,21 +40,21 @@
     background-color:#fafafa;
     height: calc(100vh - 190px);
     padding: 0 40px;
-    &___data{
+    &__data{
       padding-bottom: 12px;
       @include df;
       padding: 35px 0 0;
-      &____name{
+      &__name{
         color: #333333;
         font-size: 16px;
       }
-      &____date{
+      &__date{
         color: #999999;
         font-size: 12px;
         margin-left: 10px;
       }
     }
-    &___say{
+    &__say{
       color: #434A54;
       font-size: 14px;
       padding-top: 12px;
@@ -65,21 +65,21 @@
     height: 90px;
     padding: 20px 40px;
     background-color: #ddd;
-    &___new-message{
+    &__new-message{
       @include df;
       width: 100%;
-      &____box{
+      &__box{
         background-color: white;
         position: relative;
         width: 100%;
-        &_____text{
+        &__text{
           height: 50px;
           width: 100%;
           padding: 0 40px 0 10px;
           line-height: 50px;
           color: #999999;
         }
-        &_____image{
+        &__image{
           position: absolute;
           top: 10px;
           right: 10px;
@@ -92,7 +92,7 @@
           cursor: pointer;
         }
       }
-      &____send-btn {
+      &__send-btn {
         width: 100px;
         height: 50px;
         padding: 0 30px;
