--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -5,14 +5,16 @@
         = current_user.name
       .sidebar__user__block__icon
         .sidebar__user__block__icon__newgroup
-          = link_to "#" do
+          = link_to new_group_path do
             = icon('fas', 'edit')
         .sidebar__user__block__icon__set
           = link_to edit_user_path(current_user) do
             = icon('fas', 'cog')
   .sidebar__groupname
-    .sidebar__groupname__box
-      .sidebar__groupname__box__groups
-        techcamp
-      .sidebar__groupname__box__message
-        まだメッセージがありません
+    - current_user.groups.each do |group|
+      .sidebar__groupname__box
+        = link_to '#' do
+          .sidebar__groupname__box__groups
+            = group.name
+          .sidebar__groupname__box__message
+            まだメッセージがありません
