--- a/app/views/shared/_main_chat.html.haml
+++ b/app/views/shared/_main_chat.html.haml
@@ -10,7 +10,7 @@
             - @group.users.each do |user|
               %li= user.name
 
-    = link_to edit_group_path(current_user), class: "contents__btn" do
+    = link_to edit_group_path(@group), class: "contents__btn" do
       Edit
 
   .chat-main__message-list
