--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.chat-main__message-list__data
+.chat-main__message-list__data{data: {message: {id: message.id}}}
   .chat-main__message-list__data__name
     = message.user.name
   .chat-main__message-list__data__date
